Update rails and other gems

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -236,6 +236,7 @@
             - :title: 
     - :layouts: !omap 
         - :application: !omap 
+            - :base_title: peergroup
             - :title: peergroup
         - :footer: !omap 
             - :links: !omap 
