Add proper Redis support for test environment
 * Add hiredis gem for better performance Redis communication
 * Add Redis gem from master git repository, so it can connect to unix socket

--- a/README
+++ b/README
@@ -16,17 +16,19 @@ This is the first version, heavy alpha.
 
   bundle install --path vendor/
 
-2. Run redis (download from http://redis.io/download) - tested on 2.0 stable release
+2. Run redis (download from http://redis.io/download) - tested on 2.0 and 2.2 stable releases, optionally tweak config/redis.yml
 
-4. Run the application
-
-  rails server
-
-5. Run node server (download from http://nodejs.org/#download) - tested on v4.0.0
+3. Run node server (download from http://nodejs.org/#download) - tested on v0.4.2
 
   node app/node.js/server.js
 
-6. Open http://localhost:3000
+You can run node as root user (sudo node ...) or with `authbind` (authbind node ...), so socket.io could bind for low port to serve xml policy file for Flash.
+
+4. Run the application
+
+  bundle exec rails server
+
+5. Open http://localhost:3000
 
 == Running tests
 
@@ -34,9 +36,21 @@ This is the first version, heavy alpha.
 
   bundle install --path vendor/
 
-2. Run tests:
+2. Run Redis server instance
+
+  redis-server config/redis-test.conf
+
+3. Run tests:
 
   rake spec
+
+=== BIG WARNING:
+
+As with test database, make sure that you run your tests on separate Redis database, as this will flush you data before tests.
+
+Unfortunately Redis gem uses default url for connection (redis://localhost:6379), so if you don't provide proper config (or use older gem than from master repository for Redis in case of unix socket), then instead of connecting to test database, your test environment could connect to other database and flush it all.
+
+You have been warned!
 
 == Translations
 
